# openswitch-ops

./: .gitignore  Makefile  diagnostic_cli.md  diagnostic_user_guide.md  groups  project.config  reviewers.config  tacacs_functionality_guide.md
schema/: CMakeLists.txt  README.md  README.validation.md  build.cmake  dhcp_leases.ovsschema  documentation.cmake  master.extschema.json  openswitch-idl.h  openswitch.metaschema.json  ops-modular.extschema  ops.extschema  ops.metaschema.json  opsschemas.cmake  sanitize.py  schemaprune.py  schemaprune_json.py  schemaprune_xml.py  system.json  vswitch.extschema  vswitch.ovsschema  vswitch.xml  vtep.ovsschema  vtep.xml
schema/common/: acl.json  acl_entry.json  bgp_aspath_filter.json  bgp_community_filter.json  bgp_neighbor.json  bgp_nexthop.json  bgp_route.json  bgp_router.json  bridge.json  bufmon.json  cli_alias.json  controller.json  daemon.json  dhcp_relay.json  dhcp_relay_v6_mcast_server.json  dhcp_server.json  fan.json  flow_table.json  interface.json  led.json  mac.json  manager.json  mclag.json  mclag_remote_interface.json  mirror.json  mstp_common_instance.json  mstp_common_instance_port.json  mstp_instance.json  mstp_instance_port.json  neighbor.json  nexthop.json  notification_subscriber.json  notification_subscription.json  ntp_association.json  ospf_area.json  ospf_interface.json  ospf_lsa.json  ospf_nbma_neighbor.json  ospf_neighbor.json  ospf_route.json  (+30 more)
schema/dbschemas/: CMakeLists.txt  build.cmake
schema/docs/: groups.extschema.json
schema/legacy/: openswitch-idl.h
schema/openswitch/: CMakeLists.txt  (+4 more)
(+617 files in other folders)
